# LogiSwarm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.md  changelog.md  docker-compose.prod.yml  docker-compose.yml  instructions.md  locustfile.py  package.json  project.md  start.md  test_api.sh  test_api_comprehensive.sh  workflow.md
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260321_0001_initial_schema.py  20260321_0002_add_projects_table.py  20260321_0003_add_vessel_positions_hypertable.py  20260325_0004_add_decision_log_table.py  20260325_0005_add_shipment_route_columns.py  20260325_0006_add_routes_table.py  20260325_0007_add_reports_table.py  20260326_0008_add_predicted_eta_columns.py  20260326_0009_add_users_table.py  20260326_0010_add_language_to_reports.py
backend/app/: api_rate_limiter.py  config.py  errors.py  main.py  middleware.py  pagination.py  rate_limiter.py  shutdown.py  simple_runtime.py
backend/app/actions/: audit_log.py  carrier_rebooking.py  email_notifier.py  slack_notifier.py  tms_webhook.py
backend/app/agents/: agent_manager.py  agent_registry.py  base_agent.py  llm_core.py  memory.py  parameterized_agent.py  prompt_builder.py  timeseries_state.py
backend/app/api/: __init__.py  actions.py  agents_ext.py  analytics.py  anomaly.py  auth.py  disruptions.py  (+14 more)
backend/tests/: __init__.py  conftest.py  test_agents.py  test_e2e_simulation.py  test_feeds.py  test_propagation.py  test_route_optimizer.py
(+136 files in other folders)
