[project]
name = "backend"
version = "0.1.0"
description = "LogiSwarm backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"alembic>=1.16.5",
	"asyncpg>=0.30.0",
	"fastapi>=0.116.1",
	"loguru>=0.7.3",
	"redis>=6.4.0",
	"psycopg[binary]>=3.2.10",
	"sqlalchemy>=2.0.43",
	"uvicorn>=0.35.0",
]
