[project]
name = "backend"
version = "0.1.0"
description = "LogiSwarm backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"alembic>=1.16.5",
	"aiosmtplib>=4.0.2",
	"asyncpg>=0.30.0",
	"chardet>=5.2.0",
	"fastapi>=0.116.1",
	"httpx>=0.28.1",
	"loguru>=0.7.3",
	"prometheus_client>=0.21.0",
	"psycopg[binary]>=3.2.10",
	"python-dotenv>=1.0.0",
	"redis>=6.4.0",
	"sqlalchemy>=2.0.43",
	"uvicorn>=0.35.0",
]
